--- a/app/src/main/res/layout/item_pager_player.xml
+++ b/app/src/main/res/layout/item_pager_player.xml
@@ -26,10 +26,12 @@
 
     <TextView
         android:id="@+id/text_view_song"
-        style="@style/TextHeader"
+        style="@style/TextHeader.PlayerSong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
         app:layout_constraintEnd_toEndOf="@+id/image_view_poster"
         app:layout_constraintStart_toStartOf="@+id/image_view_poster"
         app:layout_constraintTop_toBottomOf="@+id/image_view_poster"
@@ -39,6 +41,9 @@
         android:id="@+id/text_view_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
         app:layout_constraintEnd_toEndOf="@+id/text_view_song"
         app:layout_constraintStart_toStartOf="@+id/text_view_song"
         app:layout_constraintTop_toBottomOf="@+id/text_view_song"
