--- a/app/src/main/res/layout/fragment_free_sound_search.xml
+++ b/app/src/main/res/layout/fragment_free_sound_search.xml
@@ -7,10 +7,11 @@
     <EditText
         android:id="@+id/edit_text_search_by"
         style="@style/EditTextFreeSoundSearch"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/search_by"
+
         android:inputType="text"
+        app:layout_constraintEnd_toStartOf="@+id/button_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,16 +19,6 @@
         android:id="@+id/button_search"
         style="@style/FreesoundSearchSongsButton"
         android:text="@string/search"
-        app:layout_constraintEnd_toStartOf="@+id/edit_text_filter_by"
-        app:layout_constraintStart_toEndOf="@+id/edit_text_search_by"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edit_text_filter_by"
-        style="@style/EditTextFreeSoundSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/filter_by"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
