--- a/resources/src/main/res/values/dimens_for_mini_player_view.xml
+++ b/resources/src/main/res/values/dimens_for_mini_player_view.xml
@@ -5,9 +5,11 @@
     <dimen name="poster_layout_width">70dp</dimen>
     <dimen name="poster_layout_height">70dp</dimen>
 
+    <dimen name="tv_artist_width">0dp</dimen>
     <dimen name="tv_artist_margin_start">8dp</dimen>
     <dimen name="tv_artist_text_size">18sp</dimen>
 
+    <dimen name="tv_song_name_width">0dp</dimen>
     <dimen name="tv_song_name_margin_start">10dp</dimen>
     <dimen name="tv_song_name_margin_bottom">14dp</dimen>
     <dimen name="tv_song_name_text_size">14sp</dimen>
