--- a/resources/src/main/res/values/styles_edit_text.xml
+++ b/resources/src/main/res/values/styles_edit_text.xml
@@ -11,6 +11,7 @@
     <style name="EditTextFreeSoundSearch" parent="Widget.AppCompat.EditText">
         <item name="android:layout_marginStart">28dp</item>
         <item name="android:layout_marginTop">40dp</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:textColorHint">@color/white</item>
         <item name="colorControlNormal">@color/white</item>
         <item name="android:layout_marginEnd">28dp</item>
