--- a/resources/src/main/res/values/styles_text.xml
+++ b/resources/src/main/res/values/styles_text.xml
@@ -28,6 +28,10 @@
         <item name="android:textColor">@color/grey</item>
     </style>
 
+    <style name="TextHeader.PlayerSong">
+        <item name="android:layout_marginTop">16dp</item>
+    </style>
+
     <style name="Text.PlayerSongTime" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -50,6 +54,10 @@
     <style name="Text.RecyclerViewItemPlaylistName">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Text.FreesoundItem">
+        <item name="android:layout_margin">16dp</item>
     </style>
 
 </resources>
