--- a/app/src/main/res/layout/item_freesound_search_songs.xml
+++ b/app/src/main/res/layout/item_freesound_search_songs.xml
@@ -2,8 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/CardViewItemFreesoundSearchSongs"
-    android:backgroundTint="@color/background_item_freesound_search_songs">
+    style="@style/CardViewItemFreesoundSearchSongs">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,8 +11,8 @@
         <ImageView
             android:id="@+id/image_view_poster"
             style="@style/ImageViewPosterForFreesoundSearchSongItem"
-            android:scaleType="centerCrop"
             android:background="@color/grey"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,11 +28,11 @@
         <TextView
             android:id="@+id/text_view_description"
             style="@style/Text.FreesoundSearchMarginStart"
+            android:ellipsize="end"
             app:layout_constraintEnd_toStartOf="@+id/image_button_play"
             app:layout_constraintStart_toEndOf="@+id/image_view_poster"
-            android:ellipsize="end"
             app:layout_constraintTop_toBottomOf="@+id/text_view_name"
-            tools:text="Description description" />
+            tools:text="Description description description description description description description description description" />
 
         <TextView
             android:id="@+id/text_view_username"
@@ -64,7 +63,7 @@
             style="@style/Text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="789"/>
+            tools:text="789" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
