--- a/app/src/main/res/layout/item_freesound_song_item.xml
+++ b/app/src/main/res/layout/item_freesound_song_item.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
-    android:layout_margin="8dp">
+    style="@style/CardViewFreesoundSongItemImages">
 
     <ImageView
         android:id="@+id/image_view"
