--- a/resources/src/main/res/values/styles_card_view.xml
+++ b/resources/src/main/res/values/styles_card_view.xml
@@ -3,14 +3,21 @@
 
     <style name="CardViewItemFreesoundSearchSongs" parent="CardView">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">75dp</item>
+        <item name="android:layout_height">70dp</item>
         <item name="android:layout_margin">4dp</item>
+        <item name="android:backgroundTint">@color/background_item_freesound_search_songs</item>
     </style>
 
     <style name="CardViewItemRecyclerViewMainFragment" parent="CardView">
         <item name="android:layout_width">190dp</item>
         <item name="android:layout_height">242dp</item>
         <item name="android:layout_marginEnd">16dp</item>
-
     </style>
+
+    <style name="CardViewFreesoundSongItemImages">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
 </resources>
