--- a/app/src/main/res/layout/fragment_my_playlists.xml
+++ b/app/src/main/res/layout/fragment_my_playlists.xml
@@ -23,7 +23,11 @@
         android:id="@+id/fab_add_playlist"
         style="@style/FABMyPlaylists"
         android:contentDescription="@string/add_new_playlist"
+        app:backgroundTint="@color/main_accent_color"
+        app:tint="@color/grey"
+        android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:fabSize="auto"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
