--- a/app/src/main/res/layout/item_favourite_song_main_fragment.xml
+++ b/app/src/main/res/layout/item_favourite_song_main_fragment.xml
@@ -23,6 +23,9 @@
         <TextView
             android:id="@+id/text_view_song_name"
             style="@style/Text.RecyclerViewItemSongName"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
             app:layout_constraintBottom_toTopOf="@+id/text_view_artist"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +35,9 @@
         <TextView
             android:id="@+id/text_view_artist"
             style="@style/Text"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
