--- a/resources/src/main/res/values/styles_button.xml
+++ b/resources/src/main/res/values/styles_button.xml
@@ -29,9 +29,8 @@
     </style>
 
     <style name="FreesoundSearchSongsItemImageButton" parent="Widget.AppCompat.ImageButton">
-        <item name="android:layout_width">36dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
         <item name="android:background">?android:selectableItemBackground</item>
     </style>
 
@@ -41,7 +40,6 @@
         <item name="android:layout_marginTop">40dp</item>
     </style>
 
-    <style name="PagerImageButtonFavourite" parent="PlayerImageButton">
-    </style>
+    <style name="PagerImageButtonFavourite" parent="PlayerImageButton"></style>
 
 </resources>
