--- a/resources/src/main/res/values/styles_card_view.xml
+++ b/resources/src/main/res/values/styles_card_view.xml
@@ -20,4 +20,9 @@
         <item name="android:layout_margin">8dp</item>
     </style>
 
+    <style name="CardViewDialogFragmentPlaylist">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">200dp</item>
+    </style>
+
 </resources>
