--- a/resources/src/main/res/values/styles_image_view.xml
+++ b/resources/src/main/res/values/styles_image_view.xml
@@ -16,4 +16,9 @@
         <item name="android:layout_width">260dp</item>
         <item name="android:layout_height">260dp</item>
     </style>
+
+    <style name="ImageViewCurrentPlaylistCheck">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+    </style>
 </resources>
