--- a/ui/src/main/res/layout/view_mini_player.xml
+++ b/ui/src/main/res/layout/view_mini_player.xml
@@ -10,6 +10,7 @@
         android:id="@+id/image_album"
         android:layout_width="@dimen/poster_layout_width"
         android:layout_height="@dimen/poster_layout_height"
+        android:contentDescription="@string/poster_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -19,9 +20,9 @@
         android:layout_width="@dimen/tv_artist_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/tv_artist_margin_start"
-        android:singleLine="true"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"
         android:textColor="@color/artist_text"
         android:textSize="@dimen/tv_artist_text_size"
         app:layout_constraintBottom_toTopOf="@+id/text_view_song_name"
@@ -35,15 +36,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/tv_song_name_margin_start"
         android:layout_marginBottom="@dimen/tv_song_name_margin_bottom"
-        android:singleLine="true"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"
         android:textColor="@color/song_name_text"
         android:textSize="@dimen/tv_song_name_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/image_button_previous"
         app:layout_constraintStart_toEndOf="@+id/image_album"
-        tools:text="Hyonna"/>
+        tools:text="Hyonna" />
 
     <ImageButton
         android:id="@+id/image_button_next"
@@ -51,6 +52,7 @@
         android:layout_height="@dimen/ib_layout_height"
         android:layout_marginEnd="@dimen/ib_next_margin_end"
         android:background="@color/player_background"
+        android:contentDescription="@string/next_song"
         android:src="@drawable/ic_baseline_skip_next_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +63,7 @@
         android:layout_width="@dimen/ib_layout_width"
         android:layout_height="@dimen/ib_layout_height"
         android:background="@color/player_background"
+        android:contentDescription="@string/play_or_pause_song"
         android:src="@drawable/ic_baseline_play_arrow_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/image_button_next"
@@ -71,6 +74,7 @@
         android:layout_width="@dimen/ib_layout_width"
         android:layout_height="@dimen/ib_layout_height"
         android:background="@color/player_background"
+        android:contentDescription="@string/previous_song"
         android:src="@drawable/ic_baseline_skip_previous_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/image_button_play"
