--- a/app/src/main/res/layout/fragment_add_songs_to_playlist.xml
+++ b/app/src/main/res/layout/fragment_add_songs_to_playlist.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/dialog_rounded"
     android:backgroundTint="@color/background_main">
 
@@ -22,11 +23,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_add_songs"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            style="@style/RecyclerViewVerticalList"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/item_add_songs_to_playlist"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_view_add_songs_to_playlist" />
 
