--- a/app/src/main/res/layout/fragment_playlist_editor.xml
+++ b/app/src/main/res/layout/fragment_playlist_editor.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,13 +22,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_edit_your_playlist" />
+        app:layout_constraintTop_toBottomOf="@+id/text_view_edit_your_playlist"
+        tools:listitem="@layout/item_playlist_editor" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_song"
-        style="FABMyPlaylists"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/FABMyPlaylists"
         android:contentDescription="@string/add_song"
         android:src="@drawable/ic_baseline_add_24"
         app:backgroundTint="@color/main_accent_color"
