--- a/app/src/main/res/menu/menu_drawer_main.xml
+++ b/app/src/main/res/menu/menu_drawer_main.xml
@@ -11,12 +11,18 @@
             android:title="@string/main_fragment" />
         <item
             android:id="@+id/freeSoundSearchFragment"
+            android:icon="@drawable/ic_world"
             android:title="@string/freesound_org" />
 
         <item
-            android:id="@+id/nav_language"
-            android:icon="@drawable/ic_world"
-            android:title="@string/language" />
+            android:id="@+id/myPlaylistsFragment"
+            android:icon="@drawable/ic_baseline_playlist_play_24"
+            android:title="@string/my_playlists" />
+
+        <item
+            android:id="@+id/updateSongsInDatabaseDialogFragment"
+            android:icon="@drawable/ic_baseline_update_24"
+            android:title="@string/update_songs_in_database" />
     </group>
 
 </menu>
