--- a/app/src/main/res/layout/fragment_free_sound_search.xml
+++ b/app/src/main/res/layout/fragment_free_sound_search.xml
@@ -4,12 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/text_view_count"
+        style="@style/Text.FreesoundItem"
+        android:text="@string/sounds_found_zero"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/edit_text_search_by"
         style="@style/EditTextFreeSoundSearch"
         android:layout_height="wrap_content"
         android:hint="@string/search_by"
-
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/button_search"
         app:layout_constraintStart_toStartOf="parent"
